Fixed footer on mobile

--- a/main.css
+++ b/main.css
@@ -187,7 +187,7 @@ footer a {
 }
 
 .icons {
-  width: 450px;
+  width: 280px;
   margin: 10px auto;
 }
 
